--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
   </style>
   <head>
-    <title>Hello!</title>
+    <title>frosdfurret's awesome website of awesomnes!</title>
   </head>
   <body>
     <marquee
@@ -24,5 +24,14 @@
         src="https://cdn.glitch.com/706d78a8-c129-44b9-ae6e-08f7c8fe871d%2FUntitled.bmp?v=1587174803231"
         height="100"
     /></marquee>
+    <img src="https://media.discordapp.net/attachments/654521283677126658/664573615282323500/image0.gif">
+    <img
+        class="title"
+        src="https://cdn.playbuzz.com/cdn/b9ec3838-45db-4439-97bc-3f1c535c0e3c/830848f3-2f12-4fee-a7f0-6a829dc64907.gif"
+        height="100"
+    />
+    <img src="https://media.discordapp.net/attachments/654521283677126658/664573615282323500/image0.gif">
+    made by frosDfurret
+    <img src="https://www.gifmania.us/Animated-Gifs-Technology/Free-Animations-Computing/Images-Microsoft/Internet-Explorer/Internet-Explorer-Loading-80645.gif">
   </body>
 </html>
