--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
       background-repeat: repeat;
       background-attachment: scroll;
       background-position: 0 0;
-      font-family: helvetica, arial, sans-serif;
+      font-family: "Comic Sans MS", sans-serif;
       margin: 2em;
       text-shadow: 2px 2px 4px #000000;
       font-style: normal;
       color: #ffffff;
+      text-align: center;
     }
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
   </style>
   <head>
     <title>frosdfurret's awesome website of awesomnes!</title>
@@ -26,10 +32,11 @@
     /></marquee>
     <img src="https://media.discordapp.net/attachments/654521283677126658/664573615282323500/image0.gif">
     <br>
+    "hello friends! welcome to my fun website! have fun!"
     <img
-        class="title"
+        class="center"
         src="https://cdn.playbuzz.com/cdn/b9ec3838-45db-4439-97bc-3f1c535c0e3c/830848f3-2f12-4fee-a7f0-6a829dc64907.gif"
-        height="100"
+        
     />
     <br>
     <img src="https://media.discordapp.net/attachments/654521283677126658/664573615282323500/image0.gif">
