--- a/index.html
+++ b/index.html
@@ -1,25 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <style>
-    body {
-      background-color: #D0E4F5;
-      background-image: url("https://spacejam.com/img/bg_stars.gif");
-      background-repeat: repeat;
-      background-attachment: scroll;
-      background-position: 0 0;
-      font-family: "Comic Sans MS", sans-serif;
-      margin: 2em;
-      text-shadow: 2px 2px 4px #000000;
-      font-style: normal;
-      color: #ffffff;
-      text-align: center;
-    }
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-  </style>
+  <link rel="stylesheet" href="styles.css">
   <head>
     <title>frosdfurret's awesome website of awesomnes!</title>
   </head>
