--- a/cute.html
+++ b/cute.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <link rel="stylesheet" href="style.css">
   <head>
-    <title>home! - frosdfurret's awesome website of awesomnes!</title>
+    <title>cUtE! :3 - frosdfurret's awesome website of awesomnes!</title>
 <link rel="icon" 
       type="image/png" 
       href="favicon.bmp">
@@ -16,29 +16,23 @@
         src="awesome_banner.bmp"
         height="100"
     /></marquee>
-	<h1>Home Menu!</h1>
+	<h1>Cute GIFs!</h1>
     <img src="rainbow_bar.gif">
      <audio controls autoplay loop>
-  <source src="mario64.wav" type="audio/wav">
+  <source src="nyan.wav" type="audio/wav">
 </audio>
   <br>
 
 	<br>
-   <h3> "hello friends! welcome 2 my cool website! have fun!"</h3>
+   <h3>here are some cute gifs for you to download!!! (they are big, pls make sure you have a fast modem connection)</h3>
     <img
         class="center"
-        src="furret.gif"
+        src="https://media1.tenor.com/images/301c8e53629f8c4219b14d74bbe7133f/tenor.gif?itemid=11182280"
         
     />
-    
-	<h1>Fun Links!!!</h1>
-	<h2>
-	<a href="https://www.youtube.com/channel/UC6jtKZH9zNtJ-V_X5PFD3QQ">YOUTUBE!</a><br>
-	<a href="dumbprojects.html">DUMB PROJECTS!</a><br>
-	<a href="cute.html">CUTE GIFS!!!</a><br>
-	<a href="torrent.html">FREE GAME TORRENTS!</a><br>
-	<a href="about.html">ABOUT THIS SITE!</a><br>
-	</h2>
+	<h2>cute ferret!!!!1<h2>
+ 
+	
     <img src="rainbow_bar.gif">
     <br>
     <h3>made by frosDfurret</h3>
